[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Bounds.gd" type="Script" id=2]
[ext_resource path="res://scenes/Bound.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]

[node name="Bounds" type="Node2D"]
script = ExtResource( 2 )

[node name="LeftBound" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="LeftBound"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBound/Area2D"]
shape = SubResource( 2 )

[node name="RightBound" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="RightBound"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightBound/Area2D"]
shape = SubResource( 3 )

[node name="TopBound" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="TopBound"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopBound/Area2D"]
shape = SubResource( 4 )

[node name="BottomBound" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="BottomBound"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomBound/Area2D"]
shape = SubResource( 5 )

[connection signal="area_entered" from="LeftBound/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="RightBound/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="TopBound/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="BottomBound/Area2D" to="." method="_on_Area2D_area_entered"]
